crates/floe-core/tests/snapshots/snapshot_errors__snapshot_error_reserved_word_parameter.snap
---
source: crates/floe-core/tests/snapshot_errors.rs
expression: output
---
[31mError:[0m `for` is a reserved word in JavaScript, so it cannot name a value in Floe. Floe accepts `for` as a field name, a member name, a named argument and a JSX attribute.
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m reserved_word_parameter.fl:1:11 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249ml[0m[38;5;249me[0m[38;5;249mt[0m[38;5;249m [0m[38;5;249ml[0m[38;5;249ma[0m[38;5;249mb[0m[38;5;249me[0m[38;5;249ml[0m[38;5;249m([0m[31mf[0m[31mo[0m[31mr[0m[38;5;249m:[0m[38;5;249m [0m[38;5;249ms[0m[38;5;249mt[0m[38;5;249mr[0m[38;5;249mi[0m[38;5;249mn[0m[38;5;249mg[0m[38;5;249m)[0m[38;5;249m [0m[38;5;249m-[0m[38;5;249m>[0m[38;5;249m [0m[38;5;249ms[0m[38;5;249mt[0m[38;5;249mr[0m[38;5;249mi[0m[38;5;249mn[0m[38;5;249mg[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[38;5;249m{[0m[38;5;249m [0m[38;5;249m"[0m[38;5;249ms[0m[38;5;249mu[0m[38;5;249mb[0m[38;5;249mm[0m[38;5;249mi[0m[38;5;249mt[0m[38;5;249m"[0m[38;5;249m [0m[38;5;249m}[0m
 [38;5;240m  │[0m           [31m─[0m[31m┬[0m[31m─[0m  
 [38;5;240m  │[0m            [31m╰[0m[31m─[0m[31m─[0m[31m─[0m reserved by JavaScript
 [38;5;240m  │[0m 
 [38;5;240m  │[0m [38;5;115mHelp[0m: Rename the value, or keep the word as a field name only
[38;5;246m───╯[0m
