crates/floe-core/tests/snapshots/snapshot_errors__snapshot_error_string_concat.snap
---
source: crates/floe-core/tests/snapshot_errors.rs
expression: output
---
[33m[W002] Warning:[0m use template literal instead of `+` for string concatenation
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m test.fl:1:10 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249ml[0m[38;5;249me[0m[38;5;249mt[0m[38;5;249m [0m[38;5;249m_[0m[38;5;249mx[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[33m"[0m[33ma[0m[33m"[0m[33m [0m[33m+[0m[33m [0m[33m"[0m[33mb[0m[33m"[0m
 [38;5;240m  │[0m          [33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m┬[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m  
 [38;5;240m  │[0m              [33m╰[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m prefer template literal
 [38;5;240m  │[0m 
 [38;5;240m  │[0m [38;5;115mHelp[0m: use `"${a}${b}"` instead
[38;5;246m───╯[0m
