crates/floe-core/tests/snapshots/snapshot_errors__snapshot_error_trait_method_param_type_mismatch.snap
---
source: crates/floe-core/tests/snapshot_errors.rs
expression: output
---
[31mError:[0m `for Type: Trait { ... }` is no longer valid. Use `impl Trait for Type { ... }` for trait impls; `for Type { ... }` is reserved for inherent pipe-functions
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m test.fl:8:11 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m8 │[0m [38;5;249mf[0m[38;5;249mo[0m[38;5;249mr[0m[38;5;249m [0m[38;5;249mM[0m[38;5;249my[0m[38;5;249mR[0m[38;5;249me[0m[38;5;249mp[0m[38;5;249mo[0m[31m:[0m[38;5;249m [0m[38;5;249mR[0m[38;5;249me[0m[38;5;249mp[0m[38;5;249mo[0m[38;5;249m [0m[38;5;249m{[0m
 [38;5;240m  │[0m           [31m┬[0m  
 [38;5;240m  │[0m           [31m╰[0m[31m─[0m[31m─[0m `for Type: Trait { ... }` is no longer valid. Use `impl Trait for Type { ... }` for trait impls; `for Type { ... }` is reserved for inherent pipe-functions
[38;5;246m───╯[0m
