crates/floe-core/tests/snapshots/snapshot_errors__snapshot_error_trait_unknown.snap
---
source: tests/snapshot_errors.rs
expression: output
---
[31m[E022] Error:[0m unknown trait `NonExistentTrait`
    [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m trait_unknown.fl:6:1 [38;5;246m][0m
    [38;5;246m│[0m
 [38;5;246m 6 │[0m [31m╭[0m[31m─[0m[31m▶[0m[31m [0m[31mf[0m[31mo[0m[31mr[0m[31m [0m[31mU[0m[31ms[0m[31me[0m[31mr[0m[31m:[0m[31m [0m[31mN[0m[31mo[0m[31mn[0m[31mE[0m[31mx[0m[31mi[0m[31ms[0m[31mt[0m[31me[0m[31mn[0m[31mt[0m[31mT[0m[31mr[0m[31ma[0m[31mi[0m[31mt[0m[31m [0m[31m{[0m
 [38;5;240m   ┆[0m [31m┆[0m   
 [38;5;246m10 │[0m [31m├[0m[31m─[0m[31m▶[0m[31m [0m[31m}[0m
 [38;5;240m   │[0m [31m│[0m       
 [38;5;240m   │[0m [31m╰[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m not defined
 [38;5;240m   │[0m     
 [38;5;240m   │[0m     [38;5;115mHelp[0m: check the spelling or define this trait
[38;5;246m────╯[0m
[33m[W001] Warning:[0m unused variable `display`
    [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m trait_unknown.fl:6:1 [38;5;246m][0m
    [38;5;246m│[0m
 [38;5;246m 6 │[0m [33m╭[0m[33m─[0m[33m▶[0m[33m [0m[33mf[0m[33mo[0m[33mr[0m[33m [0m[33mU[0m[33ms[0m[33me[0m[33mr[0m[33m:[0m[33m [0m[33mN[0m[33mo[0m[33mn[0m[33mE[0m[33mx[0m[33mi[0m[33ms[0m[33mt[0m[33me[0m[33mn[0m[33mt[0m[33mT[0m[33mr[0m[33ma[0m[33mi[0m[33mt[0m[33m [0m[33m{[0m
 [38;5;240m   ┆[0m [33m┆[0m   
 [38;5;246m10 │[0m [33m├[0m[33m─[0m[33m▶[0m[33m [0m[33m}[0m
 [38;5;240m   │[0m [33m│[0m       
 [38;5;240m   │[0m [33m╰[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m defined but never used
 [38;5;240m   │[0m     
 [38;5;240m   │[0m     [38;5;115mHelp[0m: prefix with underscore `_display` to suppress
[38;5;246m────╯[0m
