crates/floe-core/tests/snapshots/snapshot_errors__snapshot_error_trait_used_in_const_annotation.snap
---
source: tests/snapshot_errors.rs
expression: output
---
[33m[W002] Warning:[0m `todo` is a placeholder that will panic at runtime
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m test.fl:6:17 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m6 │[0m [38;5;249mc[0m[38;5;249mo[0m[38;5;249mn[0m[38;5;249ms[0m[38;5;249mt[0m[38;5;249m [0m[38;5;249mx[0m[38;5;249m:[0m[38;5;249m [0m[38;5;249mR[0m[38;5;249me[0m[38;5;249mp[0m[38;5;249mo[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[33mt[0m[33mo[0m[33md[0m[33mo[0m
 [38;5;240m  │[0m                 [33m─[0m[33m─[0m[33m┬[0m[33m─[0m  
 [38;5;240m  │[0m                   [33m╰[0m[33m─[0m[33m─[0m[33m─[0m not yet implemented
 [38;5;240m  │[0m 
 [38;5;240m  │[0m [38;5;115mHelp[0m: replace with actual implementation before shipping
[38;5;246m───╯[0m
[31m[E049] Error:[0m `Repo` is a trait, not a type — traits cannot be used in type positions
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m test.fl:6:10 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m6 │[0m [38;5;249mc[0m[38;5;249mo[0m[38;5;249mn[0m[38;5;249ms[0m[38;5;249mt[0m[38;5;249m [0m[38;5;249mx[0m[38;5;249m:[0m[38;5;249m [0m[31mR[0m[31me[0m[31mp[0m[31mo[0m[31m [0m[38;5;249m=[0m[38;5;249m [0m[38;5;249mt[0m[38;5;249mo[0m[38;5;249md[0m[38;5;249mo[0m
 [38;5;240m  │[0m          [31m─[0m[31m─[0m[31m┬[0m[31m─[0m[31m─[0m  
 [38;5;240m  │[0m            [31m╰[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m trait, not a type
 [38;5;240m  │[0m 
 [38;5;240m  │[0m [38;5;115mHelp[0m: traits are compile-time contracts and cannot appear as types
[38;5;246m───╯[0m
[33m[W001] Warning:[0m unused variable `x`
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m test.fl:6:1 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m6 │[0m [33mc[0m[33mo[0m[33mn[0m[33ms[0m[33mt[0m[33m [0m[33mx[0m[33m:[0m[33m [0m[33mR[0m[33me[0m[33mp[0m[33mo[0m[33m [0m[33m=[0m[33m [0m[33mt[0m[33mo[0m[33md[0m[33mo[0m
 [38;5;240m  │[0m [33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m┬[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m  
 [38;5;240m  │[0m           [33m╰[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m defined but never used
 [38;5;240m  │[0m 
 [38;5;240m  │[0m [38;5;115mHelp[0m: prefix with underscore `_x` to suppress
[38;5;246m───╯[0m
