crates/floe-core/tests/snapshots/snapshot_errors__snapshot_error_type_mismatch_comparison.snap
---
source: crates/floe-core/tests/snapshot_errors.rs
expression: output
---
[31m[E008] Error:[0m cannot compare `number` with `string`
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m test.fl:1:10 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249ml[0m[38;5;249me[0m[38;5;249mt[0m[38;5;249m [0m[38;5;249m_[0m[38;5;249mx[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[31m1[0m[31m [0m[31m=[0m[31m=[0m[31m [0m[31m"[0m[31mh[0m[31me[0m[31ml[0m[31ml[0m[31mo[0m[31m"[0m
 [38;5;240m  │[0m          [31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m┬[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m  
 [38;5;240m  │[0m                [31m╰[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m mismatched types
 [38;5;240m  │[0m 
 [38;5;240m  │[0m [38;5;115mHelp[0m: both sides of `==` must have the same type
[38;5;246m───╯[0m
